fix to cta on mobile

--- a/wp-content/themes/srwc-theme/resources/assets/styles/layouts/_front-page.scss
+++ b/wp-content/themes/srwc-theme/resources/assets/styles/layouts/_front-page.scss
@@ -25,7 +25,7 @@ body.template-front-page {
       width: 100%;
       display: flex;
       justify-content: center;
-      align-items: flex-end;
+      align-items: center;
 
       @include mobile {
         padding: 35px;
